# NAVI-api

./: Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/routers/: root.py
common/constants/: label.py  weight.py
common/dto/pedestrian/: request.py
common/dto/poi/: request.py  response.py
common/dto/prediction/: response.py
common/models/: line.py  object.py  point.py  prediction.py  processing.py
common/utils/: config.py  db.py
dtos/: prediction.py
routers/: image.py  location.py  pedestrian.py  poi.py  root.py
routers/dto/: pedestrian.py
services/image/: image_service.py
services/location/: location_service.py
services/main/: main_service.py
services/pedestrian/: pedestrian_service.py
services/pedestrian/dtos/: response.py
services/poi/: poi_service.py
services/prediction/: prediction_service.py
services/road/: route.py
utils/: config.py
